fixed nav link size on mobile

--- a/themes/afterclass/src/styles/components/header.scss
+++ b/themes/afterclass/src/styles/components/header.scss
@@ -18,7 +18,11 @@
     color:white;
 
     &--large{
-        font-size: 28px;
+
+        @include media-breakpoint-up(lg) {
+            font-size: 28px;
+        }
+        
     }
 }
 
